--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -61,6 +61,8 @@ https://twitter.com/TkDodo/status/1714262102305632643
 ---
 
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
+- 📜 [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
+- 📜 [Benchmarking MobX-State-Tree Performance](https://coolsoftware.dev/blog/benchmarking-mobx-state-tree/)
 - 📜 [Embedding Remix in Directus](https://echobind.com/post/embedding-remix-in-directus)
 - 📜 [A love letter to the Remix loader](https://laconicwit.com/a-love-letter-to-the-remix-loader/)
 - 📜 [Programmatic SEO in Next.js](https://practicalprogrammatic.com/blog/programmatic-seo-in-nextjs/)
@@ -69,9 +71,9 @@ https://twitter.com/TkDodo/status/1714262102305632643
 - 📜 [Unlocking the Power of Storybook](https://formidable.com/blog/2023/unlocking-the-power-of-storybook/)
 - 📜 [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/)
 - 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
-- 📜 [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
 - 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
 - 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
+- 📦 [Rspress v1.0 - A fast Rspack-based static site generator](https://github.com/orgs/web-infra-dev/discussions/5): première version stable pour ce concurrent de Docusaurus basé sur React, MDX, Rust et Rspack. Affiche un temps de build performant et une belle liste de features.
 - 📦 [Legend-State v2.0 - Performance and Persistence](https://legendapp.com/open-source/legend-state-v2/)
 - 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
 - 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
@@ -107,26 +109,28 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 - 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
 - 📦 [Gluestack-ui v1.0 - Universal & Accessible UI Components for React Native & Web, Unstyled & Themed!](https://gluestack.io/ui/v1) https://twitter.com/sanketsahu/status/1712729417309626570
 - 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
-- 📦 [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
 - 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos) https://twitter.com/o_kwasniewski/status/1714267035583328452
 - 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles) https://twitter.com/jpudysz/status/1714189338458624278
 - 📦 [VisionCamera v3.4 - 7x faster](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.4.0) https://twitter.com/mrousavy/status/1713939416463397165
+- 📦 [React-Native-Screens v3.26 - useAnimatedHeaderHeight](https://github.com/software-mansion/react-native-screens/releases/tag/3.26.0) https://twitter.com/swmansion/status/1714324990491762873
+- 📦 [react-native-vercel-ai - cross-platform interface to Vercel AI](https://github.com/bidah/react-native-vercel-ai)
+- 📦 [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-- [Intégrez vos données métiers au modèle OpenAI GPT avec Next.js](https://www.premieroctet.com/blog/integrez-vos-donnees-metiers-au-modele-openai-gpt-avec-nextjs)
-- [Next 13.4 : Tour d’horizon des server actions](https://www.premieroctet.com/blog/next-server-actions)
-- [React Native Paris #4 - 19 octobre chez Octo](https://www.meetup.com/fr-FR/react-native-paris-meetup/events/296450009/)
-- [Les nouveautés de Next.JS 13 qui changent tout](https://www.youtube.com/watch?v=34Utg0x06rI)
-- [HTMX, l'anti Framework JS (vs React)](https://www.youtube.com/watch?v=YFFNVEL0Blw)
+- 📜 [Next 13.4 : Tour d’horizon des server actions](https://www.premieroctet.com/blog/next-server-actions)
+- 📜 [Intégrez vos données métiers au modèle OpenAI GPT avec Next.js](https://www.premieroctet.com/blog/integrez-vos-donnees-metiers-au-modele-openai-gpt-avec-nextjs)
+- 🎥 [Les nouveautés de Next.JS 13 qui changent tout](https://www.youtube.com/watch?v=34Utg0x06rI)
+- 🎥 [HTMX, l'anti Framework JS (vs React)](https://www.youtube.com/watch?v=YFFNVEL0Blw)
+- 👥 [React Native Paris #4 - 19 octobre chez Octo](https://www.meetup.com/fr-FR/react-native-paris-meetup/events/296450009/)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 [![À l'abordage de React](/emails/issues/160/a-l-abordage-de-react.jpg)](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-18102023)
 
-💸 **[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-18102023)**
+**[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-18102023)**
 
 Découvrez "À l'abordage de React" en pré-vente dès la semaine prochaine, avec les deux premiers modules et un **accès à vie** aux autres modules lorsqu'ils sortiront.
 
@@ -136,15 +140,16 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-- 👀 [Netlify Functions 2.0](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
+- 👀 [Netlify Functions 2.0 - standard Request/Response](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
 - 👀 [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
 - 📜 [Understanding Cookies](https://vercel.com/guides/understanding-cookies)
 - 📜 [The design system ecosystem](https://bradfrost.com/blog/post/the-design-system-ecosystem/)
 - 📜 [CSS relative color syntax - in Chrome 119](https://developer.chrome.com/blog/css-relative-color-syntax/)
 - 📜 [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
 - 📜 [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
+- 📜 [DefinitelyTyped is a monorepo!](https://jakebailey.dev/posts/pnpm-dt-3/)
+- 📦 [Node.js v21 - stable fetch/WebStreams, default module system flag, V8 11.8, v20 going LTS...](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
 - 📦 [Parcel v2.10 - big performance improvements](https://github.com/parcel-bundler/parcel/releases/tag/v2.10.0)
-- 📦 [Node.js v21 - stable fetch/WebStreams, default module system flag, V8 11.8, v20 now LTS...](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
 - 📦 [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
 - 📦 [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
 
@@ -152,12 +157,6 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/drewhamlett/status/1712965434973020381
-
-https://twitter.com/BHolmesDev/status/1713177728143241403
-
-https://twitter.com/jamonholmgren/status/1712886824283394177
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/163/meme.jpg)](https://twitter.com/BHolmesDev/status/1713177728143241403)
 
 A plus 👋
