--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -36,6 +36,30 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
+[![TanStack Query v5](/emails/issues/163/tanstack-query-v5.jpg)](https://tanstack.com/blog/announcing-tanstack-query-v5)
+
+[**TanStack Query v5**](https://tanstack.com/blog/announcing-tanstack-query-v5)
+
+Après de nombreuses pré-releases, la v5 de TanStack Query sort en version stable, y compris l'interface React Query. On y retrouve en particulier:
+
+- une API unifiée, mieux typée, sans overloads
+- support Suspense stable. Streaming, React Server Components (expérimental)
+- de nombreuses autres améliorations: infinite queries, persistence, devtools, optimistic updates, useMutationState...
+
+https://twitter.com/TkDodo/status/1714262102305632643
+
+---
+
+[![Rspress v1.0 - A fast Rspack-based static site generator](/emails/issues/163/rspress.jpg)](https://github.com/orgs/web-infra-dev/discussions/5)
+
+[**Rspress v1.0 - A fast Rspack-based static site generator**](https://github.com/orgs/web-infra-dev/discussions/5)
+
+Première version stable pour générateur de site statique venant de l'équipe ByteDance, basé sur Rust, React et MDX. Un concurrent sérieux pour Docusaurus, Nextra, Vitepress, Starlight et autres solutions orientées contenu. Rspress affiche de très bonnes performances au build, tout en présentant une belle liste de features: i18n, versioning, search... La compétition devient rude, et ça me motive encore plus pour ajouter du Rust dans Docusaurus 😄!
+
+https://twitter.com/sebastienlorber/status/1714600933810655608
+
+---
+
 Remix unstable Vite support:
 
 https://twitter.com/ericsimons40/status/1712924772043227192
@@ -52,14 +76,6 @@ Remix 2.1 https://github.com/remix-run/remix/releases https://twitter.com/remix_
 
 ---
 
-TanStack Query v5
-
-https://tanstack.com/blog/announcing-tanstack-query-v5
-
-https://twitter.com/TkDodo/status/1714262102305632643
-
----
-
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
 - 📜 [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
 - 📜 [Benchmarking MobX-State-Tree Performance](https://coolsoftware.dev/blog/benchmarking-mobx-state-tree/)
@@ -73,7 +89,6 @@ https://twitter.com/TkDodo/status/1714262102305632643
 - 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
 - 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
 - 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
-- 📦 [Rspress v1.0 - A fast Rspack-based static site generator](https://github.com/orgs/web-infra-dev/discussions/5): première version stable pour ce concurrent de Docusaurus basé sur React, MDX, Rust et Rspack. Affiche un temps de build performant et une belle liste de features.
 - 📦 [Legend-State v2.0 - Performance and Persistence](https://legendapp.com/open-source/legend-state-v2/)
 - 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
 - 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
