--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -72,8 +72,6 @@ https://twitter.com/remix_run/status/1713916968753885244
 
 https://remix.run/docs/en/dev/future/vite
 
-Remix 2.1 https://github.com/remix-run/remix/releases https://twitter.com/remix_run/status/1713967835410514103
-
 ---
 
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
@@ -89,9 +87,10 @@ Remix 2.1 https://github.com/remix-run/remix/releases https://twitter.com/remix_
 - 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
 - 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
 - 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
-- 📦 [Legend-State v2.0 - Performance and Persistence](https://legendapp.com/open-source/legend-state-v2/)
-- 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
+- 📦 [Remix v2.1 - Experimental support for View Transitions](https://github.com/remix-run/remix/releases/tag/remix%402.1.0) https://twitter.com/remix_run/status/1713967835410514103
 - 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
+- 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
+- 📦 [Legend-State v2.0 - Performance and Persistence](https://legendapp.com/open-source/legend-state-v2/)
 - 📦 [Next-international v1.1 - Improved App Router support](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
 - 🎥 [Statically analysing React components for fun and profit](https://www.youtube.com/watch?v=kjOacmVsLSE): Sathya travaille sur le compiler React Forget. Il nous dévoile des détails intéressants sur le compiler tant attendu. Le compiler peut fonctionner sur du JS non typé. Il comprend la convention de nommage des hooks. Il raisonne localement, peut optimiser les composants en parallèle et être adopté incrémentalement. Son système d'alias analysis est encore plus complèxe que celui du moteur V8. On devrait en entendre à nouveau parler dans les prochaines semaines, notamment à la conf React-Advanced!
 - 👥 [Next.js Conf - 26 October - Speakers announced](https://nextjs.org/conf/speakers)
