--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -60,17 +60,32 @@ https://twitter.com/sebastienlorber/status/1714600933810655608
 
 ---
 
-Remix unstable Vite support:
+[![Remix - Vite Support](/emails/issues/163/remix-vite.jpg)](https://remix.run/docs/en/dev/future/vite)
 
-https://twitter.com/ericsimons40/status/1712924772043227192
+[**Remix - Vite Support (Unstable)**](https://remix.run/docs/en/dev/future/vite)
 
-https://github.com/remix-run/remix/discussions/7632
+Remix explique le choix de devenir un plugin Vite dans cette [proposal](https://github.com/remix-run/remix/discussions/7632). Cela lui permet d'ouvrir son compilateur et de devenir plus flexible en laissant la possibilité d'ajouter ses propres plugins Vite pour gérer divers scenarios: MDX, GraphQL, Tailwind, path aliases...
 
 https://twitter.com/remix_run/status/1712881668560691613
 
 https://twitter.com/remix_run/status/1713916968753885244
 
-https://remix.run/docs/en/dev/future/vite
+---
+
+[![Statically analysing React components for fun and profit](/emails/issues/163/react-forget.jpg)](https://www.youtube.com/watch?v=kjOacmVsLSE)
+
+🎥 [**Statically analysing React components for fun and profit**](https://www.youtube.com/watch?v=kjOacmVsLSE)
+
+Sathya travaille sur React Forget, le compiler tant attendu. Ce talk nous dévoile quelques détails intéressants:
+
+- Le compiler est possible grace au "nouveau" modèle de React, qui n'utilise plus de classes ou de `this`
+- Il raisonne localement, est capable d'optimiser en parallèle, et peut être adopté incrémentalement
+- Il fonctionne sur du JavaScript non typé, et comprends les conventions React comme les hooks et le prefix "use"
+- Son système d'alias analysis est encore plus complèxe que celui du moteur V8
+
+Sathya annonce qu'on devrait en entendre plus souvent parler dans les semaines à venir, notamment dans le talk ["Understanding Idiomatic React" à React Advanced](https://reactadvanced.com/schedule-offline) dans à peine 2 jours. Bref, on a hâte d'en savoir plus!
+
+https://twitter.com/sebastienlorber/status/1714334740445118795
 
 ---
 
@@ -92,7 +107,6 @@ https://remix.run/docs/en/dev/future/vite
 - 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
 - 📦 [Legend-State v2.0 - Performance and Persistence](https://legendapp.com/open-source/legend-state-v2/)
 - 📦 [Next-international v1.1 - Improved App Router support](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
-- 🎥 [Statically analysing React components for fun and profit](https://www.youtube.com/watch?v=kjOacmVsLSE): Sathya travaille sur le compiler React Forget. Il nous dévoile des détails intéressants sur le compiler tant attendu. Le compiler peut fonctionner sur du JS non typé. Il comprend la convention de nommage des hooks. Il raisonne localement, peut optimiser les composants en parallèle et être adopté incrémentalement. Son système d'alias analysis est encore plus complèxe que celui du moteur V8. On devrait en entendre à nouveau parler dans les prochaines semaines, notamment à la conf React-Advanced!
 - 👥 [Next.js Conf - 26 October - Speakers announced](https://nextjs.org/conf/speakers)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
