--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -90,18 +90,17 @@ https://twitter.com/sebastienlorber/status/1714334740445118795
 ---
 
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
-- 📜 [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
-- 📜 [Benchmarking MobX-State-Tree Performance](https://coolsoftware.dev/blog/benchmarking-mobx-state-tree/)
-- 📜 [Embedding Remix in Directus](https://echobind.com/post/embedding-remix-in-directus)
-- 📜 [A love letter to the Remix loader](https://laconicwit.com/a-love-letter-to-the-remix-loader/)
-- 📜 [Programmatic SEO in Next.js](https://practicalprogrammatic.com/blog/programmatic-seo-in-nextjs/)
-- 📜 [Classed Components](https://flexible.dev/blog/single-line-components/)
-- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
-- 📜 [Unlocking the Power of Storybook](https://formidable.com/blog/2023/unlocking-the-power-of-storybook/)
-- 📜 [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/)
+- 📜 [Vercel - How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js): explique le fonctionnement de `optimizePackageImports`, une option ajoutée dans la dernière version de Next.js pour optimiser l'import des "Barrel files", ces `index.js` qui re-exporte plusieurs modules et causent des soucis de performance. https://twitter.com/shuding_/status/1712849886050218279
+- 📜 [Unlocking the Power of Storybook](https://formidable.com/blog/2023/unlocking-the-power-of-storybook/): un excellent article qui partage de nombreuses astuces pragmatiques sur l'usage de Storybook pour itérer plus vite. Si vous avez un Storybook, je vous conseille vivement d'utiliser des tests de régression visuels.
+- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition): article intéractif qui illustre un cas classique où une update React bloque le thread principal. Explique comment utiliser correctement les transitions et le concurrent rendering pour améliorer l'UX.
+- 📜 [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/): reflexions intéressantes sur l'usage de mémoisation en React. Un point sur lequel je ne suis d'accord: pour moi [🐦 les optimisations devraient être encapsulées](https://twitter.com/sebastienlorber/status/1709258823582564644).
+- 📜 [A love letter to the Remix loader](https://laconicwit.com/a-love-letter-to-the-remix-loader/): apologie du loader Remix, une abstraction élégante, dynamique, facile à typer. Décrit aussi quelques challenges à surmonter.
+- 📜 [Programmatic SEO in Next.js](https://practicalprogrammatic.com/blog/programmatic-seo-in-nextjs/): propose de générer des pages Next.js avec les RSCs en fonction d'un jeu de données.
+- 📜 [Classed Components](https://flexible.dev/blog/single-line-components/): propose de simplifier l'usage de Tailwind en ré-utilisant une technique de styled-components et package `@tw-classed/react`
 - 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
-- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
 - 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
+- 📜 [Embedding Remix in Directus](https://echobind.com/post/embedding-remix-in-directus)
+- 📜 [Benchmarking MobX-State-Tree Performance](https://coolsoftware.dev/blog/benchmarking-mobx-state-tree/)
 - 📦 [Remix v2.1 - Experimental support for View Transitions](https://github.com/remix-run/remix/releases/tag/remix%402.1.0) https://twitter.com/remix_run/status/1713967835410514103
 - 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
 - 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
