--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -132,9 +132,18 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
+[![Gluestack](/emails/issues/163/gluestack.jpg)](https://gluestack.io/ui/v1)
+
+[**Gluestack-ui v1.0 - Universal & Accessible UI Components for React Native & Web, Unstyled & Themed**](https://gluestack.io/ui/v1)
+
+Sortie en version v1.0 stable pour cette nouvelle solution de styling cross-platform en React-Native. On peut dire qu'il y a déjà pas mal de choses fournies dans cette version: plugin VSCode, kit Figma, support Expo et Next.js, primitives headless et stylisées. Il va falloir étudier tout ça de plus près! J'ai l'impression que le support RSC avec Next.js est encore limité, et il faudra utiliser "use client".
+
+https://twitter.com/sanketsahu/status/1712729417309626570
+
+---
+
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
 - 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
-- 📦 [Gluestack-ui v1.0 - Universal & Accessible UI Components for React Native & Web, Unstyled & Themed!](https://gluestack.io/ui/v1) https://twitter.com/sanketsahu/status/1712729417309626570
 - 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
 - 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos) https://twitter.com/o_kwasniewski/status/1714267035583328452
 - 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles) https://twitter.com/jpudysz/status/1714189338458624278
@@ -167,7 +176,6 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-- 👀 [Netlify Functions 2.0 - standard Request/Response](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
 - 👀 [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
 - 📜 [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
 - 📜 [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
