--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -8,9 +8,15 @@ unlisted: true
 
 Salut à tous !
 
-Pause congé!
+Il y a beaucoup de contenu cette semaine! De nombreuses sorties mais aussi de très bons articles React. Cela ne risque pas de s'arrêter, avec les belles conférences React qui arrivent: React Advanced, Next.js Conf, reactjsday...
 
-<Todo />
+J'ai aussi une belle nouvelle à vous partager en avance: je vais tout prochainement devenir papa d'une petite fille 🤗
+
+La newsletter va pour la 1ère fois faire une longue pause de plusieurs semaines, qui commence dès maintenant. La prochaine newsletter est prévue le 29 Novembre.
+
+Sinon je garde le cap pour franchir les 30 000 abonnés d'ici la fin de l'année, alors pendant mon absence, continuez à me ramener vos potes 😜
+
+Merci et à bientôt 👋
 
 <!-- truncate -->
 
