--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /163
-title: "React Hebdo #163: ..."
+title: "React Hebdo #163: React-Query, Rspress, React-Forget, Remix Vite, Next.js Barrels, Storybook, Memo, Transitions, Gluestack, VisionCamera, Unistyles, VisionOS, Expo debugging..."
 authors: [slorber]
 date: 10-17-2023
 unlisted: true
@@ -151,8 +151,8 @@ https://twitter.com/sanketsahu/status/1712729417309626570
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
 - 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
 - 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
-- 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos) https://twitter.com/o_kwasniewski/status/1714267035583328452
-- 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles) https://twitter.com/jpudysz/status/1714189338458624278
+- 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos): le fork React-Native de Callstack qui fait tourner React-Native sur VisionOS a été publié. https://twitter.com/o_kwasniewski/status/1714267035583328452
+- 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles): version stable pour cette nouvelle solution de styling cross-platform qui propose d'améliorer la DX de React-Native StyleSheet. https://twitter.com/jpudysz/status/1714189338458624278
 - 📦 [VisionCamera v3.4 - 7x faster](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.4.0) https://twitter.com/mrousavy/status/1713939416463397165
 - 📦 [React-Native-Screens v3.26 - useAnimatedHeaderHeight](https://github.com/software-mansion/react-native-screens/releases/tag/3.26.0) https://twitter.com/swmansion/status/1714324990491762873
 - 📦 [react-native-vercel-ai - cross-platform interface to Vercel AI](https://github.com/bidah/react-native-vercel-ai)
