--- a/website/newsletter/163/index.mdx
+++ b/website/newsletter/163/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /163
-title: "This Week In React #163: ..."
+title: "This Week In React #163: React-Query, React-Forget, Rspress, Remix Vite, Next.js Barrels, Storybook, Memo, Transitions, Gluestack, VisionCamera, Unistyles, VisionOS, Expo debugging..."
 authors: [slorber]
 date: 10-17-2023
 unlisted: true
